Revision history for File::DataClass::Storage::YAML

          - Storage API methods now called read_from_file and write_to_file
          - Dropped Class::Method::ModifiersX::Augment
          - Replaced namespace::sweep with autoclean
          - Passes tests

0.1.1     2014-05-22 12:24:47
          - Added project files to master branch
