@@ -2,10 +2,10 @@ name = File-DataClass-Storage-YAML
 
 [Prereqs]
 perl                 = 5.01
-namespace::autoclean = 0.19
-File::DataClass      = v0.44.0
-Moo                  = 1.005000
-YAML::Tiny           = 1.62
+namespace::autoclean = 0.26
+File::DataClass      = v0.63.0
+Moo                  = 2.000001
+YAML::Tiny           = 1.67
 
 [Prereqs / ConfigureRequires]
 version           = 0.88
@@ -33,16 +33,35 @@ license           = http://dev.perl.org/licenses/
 homepage          = https://metacpan.org/author/PJFL
 bugtracker.web    = http://rt.cpan.org/NoAuth/Bugs.html?Dist=File-DataClass-Storage-YAML
 bugtracker.mailto = bug-File-DataClass-Storage-YAML@rt.cpan.org
+repository.url    = git://github.com/pjfl/p5-file-dataclass-storage-yaml.git
+repository.web    = http://github.com/pjfl/p5-file-dataclass-storage-yaml
+repository.type   = git
+
+[ReadmeAnyFromPod / ReadmeMarkdownInRoot]
+filename          = README.md
+location          = root
+type              = markdown
+
+[Run::BeforeBuild]
+run               = cp .build.PL Build.PL
+
+[CopyFilesFromBuild]
+copy              = Build.PL
+move              = cpanfile
+
+[GatherDir]
+exclude_filename  = cpanfile
 
 ; So apparently order matters
 [ReadmeAnyFromPod]
 [Signature]
-[GatherDir]
 [AbstractFromPOD]
 [LicenseFromModule]
 [VersionFromModule]
 [ModuleBuild::Custom]
+[CPANFile]
 [License]
+[MetaConfig]
 [MetaJSON]
 [MetaYAML]
 [ManifestInRoot]
